--- a/ProyectoCaC/css/styleformulario.css
+++ b/ProyectoCaC/css/styleformulario.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap');
 body {
     color: rgb(0, 0, 0);
     font-family: Montserrat, Arial, Helvetica, sans-serif;
@@ -22,7 +23,7 @@ footer {
  
   /* Estilo para el formulario */
 form {
-    max-width: 400px;
+    max-width: 350px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
@@ -60,9 +61,34 @@ form {
   
   /* Estilo para el botón de envío cuando se pasa el cursor por encima */
   button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: rgb(1, 104, 55);
   }
 
   .centrado {
     text-align: center;
   }
+
+  nav{
+    background-color: rgba(18, 49, 67, 0.821);
+    padding: 15px;
+    margin: 10px;
+}
+
+header {
+    font-size: 50px;
+}
+
+h1 {
+    font-size: 2rem;
+    /* 32px */
+}
+
+h2 {
+    font-size: 1.5rem;
+    /* 24px */
+}
+
+p {
+    font-size: 1rem;
+    /* 16px */
+}
