cambios de colores

--- a/ProyectoCaC/css/style.css
+++ b/ProyectoCaC/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap');
 
 body {
-    color: rgb(255, 255, 255);
+    color: white
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 14px;
 
@@ -9,20 +9,14 @@ body {
     
 }
 
-<<<<<<< HEAD
-header, nav, footer {
-    background-color: rgba(36, 144, 83, 0.83);
-=======
 header {
-    background-color: rgba(1, 104, 55, 0.821);
+    background-color: white
     padding: 15px;
     margin: 10px;
 }
 
 nav{
-    background-color: rgba(18, 49, 67, 0.821);
->>>>>>> c3b125e4c39b7927cd276124bdfc1c40dc2525b5
-    padding: 15px;
+    background-color: white
     margin: 10px;
 }
 
@@ -54,6 +48,9 @@ a {
     flex-wrap: wrap;
     justify-content: center;
   }
+
+
+     
 
 footer {
     color:#fff;
@@ -101,7 +98,7 @@ footer {
 }
 
 .subtitulo{
-    color: white;
+    color: black;
     font-size: 70%;
     text-align: center;
 }
