--- a/ProyectoCaC/css/style.css
+++ b/ProyectoCaC/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap');
 
 body {
-    color: white
+    color: black;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 14px;
 
@@ -10,13 +10,13 @@ body {
 }
 
 header {
-    background-color: white
+    background-color: white;
     padding: 15px;
     margin: 10px;
 }
 
 nav{
-    background-color: white
+    background-color: white;
     margin: 10px;
 }
 
