--- a/ProyectoCaC/css/style.css
+++ b/ProyectoCaC/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap');
 
 body {
-    color: black;
+    color: rgb(255, 255, 255);
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 14px;
 
@@ -10,13 +10,15 @@ body {
 }
 
 header {
-    background-color: white;
+    background-color: rgb(1, 104, 55, 0.821);
     padding: 15px;
     margin: 10px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 10px;
 }
 
-nav{
-    background-color: white;
+nav {
+    background-color: rgb();
     margin: 10px;
 }
 
@@ -51,6 +53,7 @@ a {
 
 
 footer {
+    margin-top: 10px;
     color:#fff;
     text-align: left;
     background-color: rgb(57, 57, 58);
@@ -60,6 +63,7 @@ footer {
 .centrado {
     text-align: center;
     font-size: 100%;
+    color: rgb(255, 255, 255);
 }
 
 .centrar-imagen{
@@ -68,6 +72,9 @@ footer {
     justify-content: center;
     align-items: center; 
     height: 100vh;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 10px 100px 10px 100px;
 }
 
 .centrado-parrafo{
@@ -83,20 +90,52 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding: 15px;
+    margin: 10px;
 }
 
 .contenedor-hijo {
     width: calc(50% - 10px);
     margin-bottom: 20px; 
-    background-color: rgb(1, 104, 55, 0.821);
+    background-color: rgb(19, 54, 73, 0.8211);
     color: #fff;
     padding: 20px;
     box-sizing: border-box;
     font-size: large;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 10px;
 }
 
 .subtitulo{
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 70%;
     text-align: center;
+}
+
+.fondo-verde {
+    background-color: rgb(1, 104, 55, 0.821);
+    margin: 10px;
+    padding: 15px;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+.fondo-azul {
+    background-color: rgb(19, 54, 73, 0.821);
+    margin: 10px;
+    padding: 15px;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+.margenes{
+    color: white;
+    background-color: rgb(19, 54, 73, 0.821);
+    padding: 15px;
+    margin: 10px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+
 }
