--- a/ProyectoCaC/css/styleformulario.css
+++ b/ProyectoCaC/css/styleformulario.css
@@ -14,6 +14,7 @@ footer {
     text-align: left;
     background-color: rgb(57, 57, 58);
     font-size: 15px;
+    margin-top: 10px;
   }
  
   /* Estilo para el formulario */
@@ -21,8 +22,8 @@ form {
     max-width: 350px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
+    border: 3px solid rgb(19, 54, 73, 255);
+    background-color: #ffffff;
     border-radius: 5px;
   }
   
@@ -40,7 +41,7 @@ form {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 2px solid #007bff;
     border-radius: 3px;
   }
   
@@ -70,7 +71,21 @@ form {
 }
 
 header {
-    font-size: 50px;
+  font-size: 50px;
+  background-color: rgba(1, 104, 55, 0.821);
+  margin: 10px 10px 10px 310px;
+  padding: 15px;
+  border: 2px solid black;
+  border-radius: 10px;
+  box-sizing: border-box;
+  color: #fff;
+  width: 50%;
+  text-align: center;
+}
+
+.centrado{
+  display: flex;
+  justify-content: center;
 }
 
 h1 {
