--- a/ProyectoCaC/css/style.css
+++ b/ProyectoCaC/css/style.css
@@ -5,8 +5,7 @@ body {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 14px;
 
-    background: #fff url("../img/fondo.jpeg") no-repeat fixed center;
-    
+    background:rgba(255, 255, 255, 0.2) url("../img/fondo.jpeg") no-repeat fixed center;
 }
 
 header {
@@ -138,4 +137,133 @@ footer {
     display: flex;
     justify-content: center;
 
+}
+
+.formulario-pedido {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 3px solid rgb(1, 104, 55);
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    text-align: center;
+}
+
+.formulario-pedido h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.formulario-pedido label {
+    display: block;
+    text-align: left;
+    margin-top: 10px;
+}
+
+.formulario-pedido select,
+.formulario-pedido input[type="number"],
+.formulario-pedido input[type="text"],
+.formulario-pedido textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 3px solid rgb(1, 104, 55);
+    border-radius: 5px;
+}
+
+.formulario-pedido input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.formulario-pedido input[type="submit"]:hover {
+    background-color: rgb(1, 104, 55);
+}
+
+.catalogo {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20px;
+}
+
+.producto {
+    width: calc(33.33% - 20px);
+    border: 3px solid rgb(1, 104, 55);
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+    background-color: rgba(19, 54, 73, 0.628);
+}
+
+.producto img {
+    max-width: 100%;
+    border: solid black;
+    border-radius: 5px;
+}
+
+.producto h3 {
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.producto p {
+    margin: 10px 0;
+}
+
+.producto button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.producto button:hover {
+    background-color:rgb(1, 104, 55);
+}
+
+.nombre-producto {
+    flex: 1;
+    text-align: left;
+}
+
+.precio-producto {
+    flex: 1;
+    text-align: right;
+}
+
+.cantidad {
+    flex: 1;
+    text-align: right;
+}
+
+.total {
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.confirmar {
+    background-color: rgb(1, 104, 55);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.confirmar:hover {
+    background-color: rgb(1, 104, 55);
 }
