--- a/ProyectoCaC/css/styleformulario.css
+++ b/ProyectoCaC/css/styleformulario.css
@@ -22,7 +22,7 @@ form {
     max-width: 350px;
     margin: 0 auto;
     padding: 20px;
-    border: 3px solid rgb(19, 54, 73, 255);
+    border: 3px solid rgb(1, 104, 55, 255);
     background-color: #ffffff;
     border-radius: 5px;
   }
@@ -41,7 +41,7 @@ form {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
-    border: 2px solid #007bff;
+    border: 2px solid rgb(1, 104, 55);
     border-radius: 3px;
   }
   
