Agregado de animacion

--- a/ProyectoCaC/css/styleformulario.css
+++ b/ProyectoCaC/css/styleformulario.css
@@ -102,3 +102,26 @@ p {
     font-size: 1rem;
     
 }
+
+@keyframes miAnimacion {
+  0% {
+   
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+ 
+    transform: scale(1.2);
+    opacity: 0.5;
+  }
+  100% {
+  
+    transform: scale(1);
+    opacity: 1;
+  }
+
+}
+
+#animacionhome {
+  animation: miAnimacion 3s ease infinite;
+}
