--- a/ProyectoCaC/css/style.css
+++ b/ProyectoCaC/css/style.css
@@ -6,6 +6,8 @@ body {
     font-size: 14px;
 
     background:rgba(255, 255, 255, 0.2) url("../img/fondo.jpeg") no-repeat fixed center;
+
+    
 }
 
 header {
@@ -266,4 +268,27 @@ footer {
 
 .confirmar:hover {
     background-color: rgb(1, 104, 55);
+}
+
+@keyframes miAnimacion {
+    0% {
+     
+      transform: scale(1);
+      opacity: 1;
+    }
+    50% {
+   
+      transform: scale(1.2);
+      opacity: 0.5;
+    }
+    100% {
+    
+      transform: scale(1);
+      opacity: 1;
+    }
+
+  }
+
+#animacionhome {
+    animation: miAnimacion 3s ease infinite;
 }
