--- a/ProyectoCaC/css/style.css
+++ b/ProyectoCaC/css/style.css
@@ -5,7 +5,7 @@ body {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 14px;
 
-    background:rgba(255, 255, 255, 0.2) url("../img/fondo.jpeg") no-repeat fixed center;
+    background:rgba(255, 255, 255, 0.2) url("../img/fondo3.jpg") no-repeat fixed center;
 
     
 }
