--- a/ProyectoCaC/css/styleformulario.css
+++ b/ProyectoCaC/css/styleformulario.css
@@ -5,7 +5,7 @@ body {
     font-size: 20px;
 
 
-    background: #fff url("../img/fondo.jpeg") no-repeat fixed center;
+    background: #fff url("../img/fondo3.jpg") no-repeat fixed center;
     
 }
 
