--- a/ProyectoCaC/css/styleformulario.css
+++ b/ProyectoCaC/css/styleformulario.css
@@ -9,6 +9,7 @@ body {
     
 }
 
+/* Footer */
 footer {
     color:#fff;
     text-align: left;
@@ -27,14 +28,14 @@ form {
     border-radius: 5px;
   }
   
-  /* Estilo para etiquetas de formulario */
+  /* Formulario */
   label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
   }
   
-  /* Estilo para campos de entrada de texto */
+  /* Texto */
   input[type="text"],
   input[type="email"],
   textarea {
@@ -45,7 +46,7 @@ form {
     border-radius: 3px;
   }
   
-  /* Estilo para el botón de envío */
+  /* Botón de envío */
   button[type="submit"] {
     background-color: #007bff;
     color: #fff;
@@ -55,21 +56,21 @@ form {
     cursor: pointer;
   }
   
-  /* Estilo para el botón mouseover */
+  /* Botón mouseover */
   button[type="submit"]:hover {
     background-color: rgb(1, 104, 55);
   }
 
-  .centrado {
-    text-align: center;
-  }
+  /* Hasta acá es el css de formulario */
 
+/* Navegacion */
   nav{
     background-color: rgba(18, 49, 67, 0.821);
     padding: 15px;
     margin: 10px;
 }
 
+/* Encabezado */
 header {
   font-size: 50px;
   background-color: rgba(1, 104, 55, 0.821);
@@ -86,6 +87,7 @@ header {
 .centrado{
   display: flex;
   justify-content: center;
+  text-align: center;
 }
 
 h1 {
@@ -103,6 +105,7 @@ p {
     
 }
 
+/* Animación */
 @keyframes miAnimacion {
   0% {
    
@@ -124,4 +127,60 @@ p {
 
 #animacionhome {
   animation: miAnimacion 3s ease infinite;
+}
+
+/* Estilos generales para todos los dispositivos (pantalla de escritorio) */
+body {
+  font-size: 16px;
+}
+
+/* Media query para dispositivos móviles */
+@media (max-width: 767px) {
+  body {
+    font-size: 14px;
+  }
+}
+
+/* Media query para tablets */
+@media (min-width: 768px) and (max-width: 1023px) {
+  body {
+    font-size: 15px;
+  }
+}
+
+/* Media query para pantallas de escritorio */
+@media (min-width: 1024px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+/* Estilos generales para todas las imágenes*/
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Media query para dispositivos móviles */
+@media (max-width: 767px) {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+/* Media query para tablets */
+@media (min-width: 768px) and (max-width: 1023px) {
+  img {
+    max-width: 80%;
+    height: auto;
+  }
+}
+
+/* Media query para pantallas de escritorio */
+@media (min-width: 1024px) {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
