--- a/ProyectoCaC/css/style.css
+++ b/ProyectoCaC/css/style.css
@@ -52,7 +52,7 @@ a {
 
 
 footer {
-    margin-top: 10px;
+    margin-top: 50px;
     color:#fff;
     text-align: left;
     background-color: rgb(57, 57, 58);
@@ -157,6 +157,7 @@ footer {
     border-radius: 5px;
     background-color: #f9f9f9;
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .formulario-pedido h2 {
