--- a/ProyectoCaC/css/styleformulario.css
+++ b/ProyectoCaC/css/styleformulario.css
@@ -16,7 +16,7 @@ footer {
     text-align: left;
     background-color: rgb(57, 57, 58);
     font-size: 15px;
-    margin-top: 10px;
+    margin-top: 50px;
   }
  
   /* Estilo para el formulario */
@@ -200,4 +200,8 @@ img {
   width: 0px auto ;
   margin: 0px auto;
   text-align: center;
+}
+
+.margin-bottom {
+  margin-bottom: 100px;
 }
