--- a/css/styleformulario.css
+++ b/css/styleformulario.css
@@ -12,6 +12,7 @@ body {
 
 /* Footer */
 footer {
+  padding: 2%;
     color:#fff;
     text-align: left;
     background-color: rgb(57, 57, 58);
@@ -77,12 +78,12 @@ header {
   font-size: 50px;
   text-align: center;
 /* Colores */
-  background-color: rgba(1, 104, 55, 0.821);
-  color: #fff;
+  /* background-color: rgba(1, 104, 55, 0.821); */
+  color: black;
 /* Bordes */  
-  border: 2px solid black;
-  border-radius: 10px;
-  box-sizing: border-box;  
+  /* border: 2px solid black; */
+  /* border-radius: 10px;
+  box-sizing: border-box;   */
 /* Flex */  
   display: flex;
   justify-content: center;
